--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "echarts": "^3.8.5",
     "element-ui": "^2.0.9",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
