--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clipboard": "^1.7.1",
     "echarts": "^3.8.5",
     "element-ui": "^2.0.9",
+    "good-storage": "^1.0.1",
     "md5": "^2.2.1",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
