--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "md5": "^2.2.1",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
+    "vue-lottie": "^0.1.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
